Fix up issue with cli

--- a/extension/index.html
+++ b/extension/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>rawkit launch...</title>
     <link rel="icon" type="image/png" href="icon.png" />
-    <link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/inline-manual-authoring-t/leiejllaoknebomjeebdjfeicdaaeijp?hl=en">
+    <link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/poapmlldjpcgenaedpopfjjagnihpkim/">
     <style type="text/css">
       html, body {
         margin: 0;
