--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>rawkit launch...</title>
     <link rel="icon" type="image/png" href="icon.png" />
+    <link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/rawkit/poapmlldjpcgenaedpopfjjagnihpkim">
     <style type="text/css">
       html, body {
         margin: 0;
@@ -143,6 +144,7 @@
       <div class="yellow"></div>
       <div class="green"></div>
     </div>
+    <button onclick="chrome.webstore.install('https://chrome.google.com/webstore/detail/rawkit/poapmlldjpcgenaedpopfjjagnihpkim', function(){}, function(){})">Hello</button>
     <a href="https://chrome.google.com/webstore/detail/rawkit/poapmlldjpcgenaedpopfjjagnihpkim?authuser=1" id="install-button">Click to add <strong>rawkit</strong> to Chrome</a>
     <script type="text/javascript">
       window.onload = function () {
