--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       <div class="yellow"></div>
       <div class="green"></div>
     </div>
-    <button onclick="chrome.webstore.install('https://chrome.google.com/webstore/detail/rawkit/poapmlldjpcgenaedpopfjjagnihpkim', function(){}, function(){})">Hello</button>
+    <button onclick="chrome.webstore.install()">Hello</button>
     <a href="https://chrome.google.com/webstore/detail/rawkit/poapmlldjpcgenaedpopfjjagnihpkim?authuser=1" id="install-button">Click to add <strong>rawkit</strong> to Chrome</a>
     <script type="text/javascript">
       window.onload = function () {
