--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       <div class="yellow"></div>
       <div class="green"></div>
     </div>
-    <a onclick="chrome.webstore.install()" id="install-button">Click to add <strong>rawkit</strong> to Chrome</a>
+    <a onclick="chrome.webstore.install('https://chrome.google.com/webstore/detail/rawkit/poapmlldjpcgenaedpopfjjagnihpkim')" id="install-button">Click to add <strong>rawkit</strong> to Chrome</a>
     <script type="text/javascript">
       window.onload = function () {
         if (!chrome.app.isInstalled) {
