--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
   <head>
     <title>rawkit launch...</title>
-    <link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/poapmlldjpcgenaedpopfjjagnihpkim">
     <link rel="icon" type="image/png" href="icon.png" />
     <style type="text/css">
       html, body {
@@ -24,9 +23,9 @@
         align-items: center;
         justify-content: center;
       }
-      button {
+      #install-button {
         text-decoration: none;
-        margin-top: 5%;
+        margin-top: 10%;
         padding: 20px;
         border: none;
         font-size: 18px;
@@ -37,23 +36,23 @@
         margin-bottom: 5%;
         transition: background 0.3s, padding 0.3s, opacity 1s;
       }
-      button:hover {
+      #install-button:hover {
         cursor: pointer;
         background: #3773D5;
         padding: 25px;
       }
-      a {
+      #install-link {
         color: #666666;
         font-size: 14px;
         text-decoration: none;
         text-align: center;
         line-height: 180%;
       }
-      .visible {
-        opacity: 1;
-      }
       .install {
-        opacity: 0;
+        display: none;
+      }
+      .install.visible {
+        display: block;
       }
       .image {
         border-radius: 50%;
@@ -64,7 +63,7 @@
         margin-bottom: 10%;
         position: relative;
       }
-      img {
+      .image img {
         position: absolute;
         top: 0;
         left: 0;
@@ -154,8 +153,8 @@
       <div class="yellow"></div>
       <div class="green"></div>
     </div>
-    <button id="install-button" class="install" onclick="chrome.webstore.install()">Click to add <strong>rawkit</strong> to Chrome</button>
-    <a href="https://chrome.google.com/webstore/detail/poapmlldjpcgenaedpopfjjagnihpkim" class="install">Or, manually install at:<br><strong>https://chrome.google.com/webstore/detail/poapmlldjpcgenaedpopfjjagnihpkim</strong></a>
+    <a href="https://chrome.google.com/webstore/detail/poapmlldjpcgenaedpopfjjagnihpkim" id="install-button" class="install" onclick="chrome.webstore.install()">Click to add <strong>rawkit</strong> to Chrome</a>
+    <a href="https://chrome.google.com/webstore/detail/poapmlldjpcgenaedpopfjjagnihpkim" id="install-link" class="install"><img src="https://developer.chrome.com/webstore/images/ChromeWebStore_BadgeWBorder_v2_496x150.png" width="240px"></a>
     <script type="text/javascript">
       window.onload = function () {
         if (!chrome.app.isInstalled) {
